--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -45,13 +45,36 @@ nav  a{
 }
 .header{
     background-color: #FFF8F3 ;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right  ;
 }
+
+
 .banner{
-    padding: 30px 30px 150px;
+    padding: 30px 30px 0px;
     display: flex;
     align-items: center;
-    
+
 }
    .banner .profile-pic{
     width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    font-weight: 700;
+    color: #474747;
+    margin-top: 5px ;
+    margin-bottom: 20px;
+    
+
+
+}
+.banner-description{
+    font-size: 15px;
+    font-weight: 500;
+    color: #474747;
+    margin-top: 5px ;
+    margin-bottom: 20px;
+    
 }
