--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -52,7 +52,7 @@ nav  a{
 
 
 .banner{
-    padding: 30px 30px 0px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
 
@@ -70,11 +70,44 @@ nav  a{
 
 
 }
+.section-titel{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-family: Open sans;
+    font-size: 18px;
+
+}
 .banner-description{
     font-size: 15px;
     font-weight: 500;
     color: #474747;
     margin-top: 5px ;
     margin-bottom: 20px;
+    
+}
+/*main section style*/
+main{
+max-width: 1140px;
+    
+}
+/*about section style*/
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background-color:#FFF8F3;
+    margin: 130px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-inf{
     
 }
