--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -94,8 +94,15 @@ nav  a{
 /*main section style*/
 main{
 max-width: 1140px;
+margin: 0 auto;
     
 }
+
+.main-section{
+    margin-top: 130px;
+}
+
+
 /*about section style*/
 .about{
     padding: 130px;
@@ -114,6 +121,37 @@ max-width: 1140px;
 .section-description{
 
 }
+/* skills related styles*/
+
+
 #what-I-do-description{
     padding: 30px 150px;
 }
+/*.skill-container{
+    display: flex;*/
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skilescriptionl-d{
+   
+
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 06);
+    
+}
+.skill-description{
+    color: #757575;
+
+}
+.resume-crolumn-titel{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
