--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -154,4 +154,54 @@ margin: 0 auto;
     font-size: 30px;
     font-weight: 700;
 }
+.resume-container{
+    display: flex;
+    gap: 50px;
 
+}
+.resume-item-description{
+    color: #757575;
+
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-container{
+    margin: 30px ;
+}
+
+
+.download-cv{
+    text-align: center;
+}
+
+
+/* footer style */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+    gap: 100px;
+}
+.contact input. textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+
+
+}
